--- a/style.css
+++ b/style.css
@@ -4,5 +4,6 @@
 .label .center {background: url("tip_bg.png") repeat-x;display: inline-block;height: 24px;font-size: 12px;line-height: 24px;}
 .label .right {background: url("tip_r.png") -1px 0  no-repeat;display: inline-block;height: 24px;overflow: hidden;width: 6px;}
 
-div #map {float: left;}
-div #info {float: right;}
+div {}
+#map {float: left;}
+#info {float: right;}
