--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 html, body {width: 99%;height: 99%;margin: 0px;padding: 0px; font-family: "나눔고딕";}
 .label {position: relative;bottom: 35pt;}
 .label * {display: inline-block;vertical-align: top;}
-.label .left {background: url("tip_l.png") no-repeat;display: inline-block;height: 24px;overflow: hidden;vertical-align: top;width: 7px;}
-.label .center {background: url("tip_bg.png") repeat-x;display: inline-block;height: 24px;font-size: 12px;line-height: 24px;}
-.label .right {background: url("tip_r.png") -1px 0  no-repeat;display: inline-block;height: 24px;overflow: hidden;width: 6px;}
+.label .left {background: url("icon/tip_l.png") no-repeat;display: inline-block;height: 24px;overflow: hidden;vertical-align: top;width: 7px;}
+.label .center {background: url("icon/tip_bg.png") repeat-x;display: inline-block;height: 24px;font-size: 12px;line-height: 24px;}
+.label .right {background: url("icon/tip_r.png") -1px 0  no-repeat;display: inline-block;height: 24px;overflow: hidden;width: 6px;}
 
 div {margin: 1px;padding: 1px;}
 #data {float: left;}
-#txtFileInput {margin-right: 4%;}
 #info {float: right;}
+#txtFileInput {width: 29%;margin-right: 4%;}
 
 #list {font-size: 11pt;border-collapse: collapse;width: 100%;}
 #list td, th {border: 1px solid #ddd;padding: 3px;}
@@ -16,5 +16,16 @@ div {margin: 1px;padding: 1px;}
 #list tr:hover {background-color: #ddd;}
 #list th {padding-top: 8px;padding-bottom: 8px;background-color: #4CAF50;color: white;}
 
-.button {background-color: #4CAF50;border: none;color: white;padding: 6px 18px;text-align: center;text-decoration: none;display: inline-block;font-size: 13px;}
+.button {background-color: #4CAF50;border: none;color: white;padding: 6px 0px;text-align: center;text-decoration: none;display: inline-block;font-size: 13px;}
 #roundbox {border-radius: 5px;background: #4CAF50;padding: 5px;padding-left: 10px;padding-right: 10px;width: 60px;height: 30px;font-size: 10pt;color: white;}
+
+.wrap {position: absolute;left: 0;bottom: 40px;width: 288px;height: 132px;margin-left: -144px;text-align: left;overflow: hidden;font-size: 12px;font-family: 'Malgun Gothic', dotum, '돋움', sans-serif;line-height: 1.5;}
+.wrap * {padding: 0;margin: 0;}
+.wrap .info {width: 286px;height: 120px;border-radius: 5px;border-bottom: 2px solid #ccc;border-right: 1px solid #ccc;overflow: hidden;background: #fff;}
+.wrap .info:nth-child(1) {border: 0;box-shadow: 0px 1px 2px #888;}
+.info .title {padding: 5px 0 0 10px;height: 30px;background: #eee;border-bottom: 1px solid #ddd;font-size: 18px;font-weight: bold;}
+.info .body {position: relative;overflow: hidden;}
+.info .desc {position: relative;margin: 13px 0 0 90px;height: 75px;}
+.desc .ellipsis {overflow: hidden;text-overflow: ellipsis;white-space: nowrap;}
+.desc .jibun {font-size: 11px;color: #888;margin-top: -2px;}
+.info .img {position: absolute;top: 6px;left: 5px;width: 73px;height: 71px;border: 1px solid #ddd;color: #888;overflow: hidden;}
