--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
-html, body {width: 99%;height: 99%;margin: 0px;padding: 0px; font-family: "나눔고딕";}
+html, body {width: 100%;height: 100%;margin: 0 0 0 0;padding: 0 0 0 0;border 0px;font-family: "나눔고딕";}
+.main {position: absolute;width: 100%;height: 100%;z-index: 0;margin: 0 0 0 0; padding: 0 0 0 0; border: 0px;}
+.modal {position: absolute;width: 100%;height: 100%;z-index: 9;opacity:0.7;background-color: #353535;margin: 0 0 0 0;padding: 0 0 0 0;border: 0px;display: none;}
+.photo {position: absolute;top: 15%;left: 15%;width: 75%;height: 75%;z-index: 10;opacity:1;margin: 0 0 0 0;padding: 0 0 0 0;border: 0px;display: none;}
 .label {position: relative;bottom: 35pt;}
 .label * {display: inline-block;vertical-align: top;}
 .label .left {background: url("icon/tip_l.png") no-repeat;display: inline-block;height: 24px;overflow: hidden;vertical-align: top;width: 7px;}
