--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-html, body {width: 100%;height: 100%;margin: 0 0 0 0;padding: 0 0 0 0;border 0px;font-family: "나눔고딕";}
-.main {position: absolute;width: 100%;height: 100%;z-index: 0;margin: 0 0 0 0; padding: 0 0 0 0; border: 0px;}
+html, body {width: 98%;height: 98%;margin: 1px;padding: 1px;border 0px;font-family: "나눔고딕";}
+.main {position: absolute;width: 98%;height: 98%;z-index: 0;margin: 1px; padding: 1px; border: 0px;}
 .modal {position: absolute;width: 100%;height: 100%;z-index: 9;opacity:0.7;background-color: #353535;margin: 0 0 0 0;padding: 0 0 0 0;border: 0px;display: none;}
 .photo {position: absolute;top: 15%;left: 15%;width: 75%;height: 75%;z-index: 10;opacity:1;margin: 0 0 0 0;padding: 0 0 0 0;border: 0px;display: none;}
 .label {position: relative;bottom: 35pt;}
